api helper completed

--- a/package.json
+++ b/package.json
@@ -38,8 +38,13 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }, 
+  },
   "devDependencies": {
     "@babel/preset-react": "^7.22.15"
+  },
+  "jest": {
+    "transformIgnorePatterns": [
+      "node_modules/(?!(axios)/)"
+    ]
   }
 }
